test update speed

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="large-12 columns">
         <h1 class="text-center">Welcome to my website</h1>
         <h2 class="text-center">It's underdevelopment, give me a sec...</h2>
+        <p>Just going to test how fast this updates now...</p>
       </div>
     </div> 
     
