--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
 
 	          <div class="top-bar-right show-for-medium">
 	            <ul id="menu-main-1" class="vertical medium-horizontal menu" data-responsive-menu="accordion medium-dropdown">
-	              <!-- LIMIT to 5 -->
+	              <!--
+	               LIMIT to 5
 	              <li class="menu-item menu-item-has-children ">
 	                <a href="#">Blog</a>
 	                <ul class="menu">
@@ -193,6 +194,7 @@
 	                  </li>
 	                </ul>
 	              </li>
+	              -->
 	            <!--  
 	              <li class="menu-item current-menu-ancestor current-menu-parent menu-item-has-children ">
 	                <a href="#">NationBuilder</a>
@@ -208,13 +210,36 @@
 	                  </li>
 	                </ul>
 	              </li>
-	             <li class="menu-item menu-item-has-children ">
-	                <a href="#">Extras</a>
+	            -->
+	              <li class="menu-item menu-item-has-children ">
+	                <a href="#">Blog</a>
 	                <ul class="menu">
-	                  <li class="menu-item"><a href="#">Gravity Forms</a></li>
+	                  <li class="menu-item">
+	                    <a href="news.html"> News </a>
+	                  </li>
+	                  <li class="menu-item">
+	                    <a href="real-estate.html"> Real Estate </a>
+	                  </li>
+	                  <li class="menu-item">
+	                    <a href="ecommerce.html"> Ecommerce </a>
+	                  </li>
+	                  <li class="menu-item">
+	                    <a href="agency.html"> Agency </a>
+	                  </li>
+	                  <li class="menu-item">
+	                    <a href="blog.html"> Blog Sidebar </a>
+	                  </li>
+	                  <li class="menu-item">
+	                    <a href="blog-column.html"> Blog Column </a>
+	                  </li>
+	                  <li class="menu-item">
+	                    <a href="portfolio.html"> Portfolio </a>
+	                  </li>
+	                  <li class="menu-item">
+	                    <a href="product-page.html"> Product Page </a>
+	                  </li>
 	                </ul>
 	              </li>
-	            -->
 	              <li class="menu-item"><a href="styleguide.html">Styleguide</a></li>
 	              <li class="menu-item "><a href="">Download</a></li>
 	            </ul>
