test with new production build

--- a/index.html
+++ b/index.html
@@ -83,20 +83,21 @@
 	          <div class="top-bar-left float-left">
 	            <ul class="menu">
 	              <li class="menu-text">
-	                              <span class="uppercase">H</span>
-	                              <span class="uppercase">A</span>
-	                              <span class="uppercase">N</span>
-	                              <span class="uppercase">S</span>
-	              
-	                              <span class="space"></span>
-	              
-	                              <span class="uppercase">M</span>
-	                              <span class="uppercase">C</span>
-	                              <span class="uppercase">M</span>
-	                              <span class="uppercase">U</span>
-	                              <span class="uppercase">R</span>
-	                              <span class="uppercase">D</span>
-	                              <span class="uppercase">Y</span>
+	              <div class="small-12 text-center">
+	                <span class="uppercase">H</span>
+	                <span class="uppercase">A</span>
+	                <span class="uppercase">N</span>
+	                <span class="uppercase">S</span>
+	              </div>
+	              <div class="small-12">                
+	                <span class="uppercase">M</span>
+	                <span class="uppercase">C</span>
+	                <span class="uppercase">M</span>
+	                <span class="uppercase">U</span>
+	                <span class="uppercase">R</span>
+	                <span class="uppercase">D</span>
+	                <span class="uppercase">Y</span>
+	              </div>
 	              </li>
 	            </ul>
 	          </div>
