--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <!-- Bootstrap CSS File -->
   <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Libraries CSS Files -->
-  <link href="assets/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<!-- Libraries CSS Files -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+
+  <!-- <link href="assets/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
   <link href="assets/lib/animate/animate.min.css" rel="stylesheet">
   <link href="assets/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -40,13 +42,7 @@
 								<span>S</span>
 							</div>
 							<div class="last-name">                
-								<span>M</span>
-								<span>C</span>
-								<span>M</span>
-								<span>U</span>
-								<span>R</span>
-								<span>D</span>
-								<span>Y</span>
+								<span>MCMURDY</span>
 							</div>
 						</div>
 			</a>
@@ -88,14 +84,17 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
+  <div id="home" class="intro route bg-image" >
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Hans McMurdy</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Developer, Maker, Gamer, Husband, Father</span><strong class="text-slider"></strong></p>
+          <h1 class="intro-title mb-4">I'm a</h1>
+          <p class="intro-subtitle">
+						<span class="text-slider-items">Developer, Maker, Gamer, Husband, Father</span>
+						<strong class="text-slider"></strong>
+					</p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -118,12 +117,12 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Hans McMurdy</span></p>
-                      <p><span class="title-s"><a href="https://github.com/hansuxdev" class="git">Github</a>  </span> </p>
-											<p><span class="title-s"> <a href="https://codepen.io/HansUXdev/" class="codpen">Codepen</a> </span> </p>
-											<p><span class="title-s"><a href="https://www.linkedin.com/in/brett-hans-mcmurdy-0a44a641/" class="git">Linkedin</a>  </span> </p>
-											<p><span class="title-s"><a href="https://medium.com/@HansOnConsult" class="git">Medium Blog</a>  </span> </p>
-											<p><span class="title-s"><a href="https://www.codementor.io/hansdev" class="git">Code Mentor</a>  </span> </p>
+											<p><span class="title-s">Name: </span> <span>Hans McMurdy</span></p>
+
+											<a href="https://github.com/hansuxdev" class=" fa fa-github-square"></a>
+											<a href="https://www.linkedin.com/in/brett-hans-mcmurdy-0a44a641/" class=" fa fa-linkedin-square"></a>
+											<a href="https://codepen.io/HansUXdev/" class=" fa fa-codepen"></a>
+											<a href="https://medium.com/@HansOnConsult" class=" fa fa-medium"></a>
                     </div>
                   </div>
                 </div>
@@ -141,10 +140,6 @@
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <span>FOUNDATION</span> <span class="pull-right">90%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
                   <span>WordPress/Custom CMS</span> <span class="pull-right">90%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -175,10 +170,13 @@
 										Code, Make, Build, Game
                   </p>
                   <p class="lead">
-										Things I do include: 
-										Game, Make, Code,  
-										I game and I've been in the top 200 global leadership boards in Battlefield Bad company 2, Battlefield 3,4, Medal of honor,
-                    If you cant tell, this is a template because I'd rather spend my time meeting deadlines and working on new products, innvations and spending time with my family.
+										I try to live passionately which is way when I get things done and here are just a few examples.
+										<br>
+										Coding - I've build multiple CLI tools for fun. Most of it pretty hacky but they've gotten the job done. Check out my github.
+										<br>
+										Make/Build - I don't just code and game, I make stuff like metal smelters, jewerly for wife, simple circuit boards and other fun stuff.
+										<br>
+										Gaming - I've been in the top 200 global leadership boards in Battlefield Bad company 2, Battlefield 1, 3, 4, 5 and Medal of honor. In multiple categories, knife kills, longest headshot, tank kills, jet kills, etc. 
                   </p>
                 </div>
               </div>
@@ -201,7 +199,7 @@
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">4</p>
+              <p class="counter">5</p>
               <span class="counter-text">YEARS OF EXPERIENCE</span>
             </div>
           </div>
@@ -254,7 +252,7 @@
               Experiance
             </h3>
             <p class="subtitle-a">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+							The tech world moves fast and you have to be ready to learn new skills. Here is small and incomplete list of some technologies I work with and have experiance in.
             </p>
             <div class="line-mf"></div>
           </div>
@@ -295,9 +293,7 @@
             <div class="service-content">
               <h2 class="s-title">Web Design</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                I wouldn't call myself a designer because I rarely use photoshop but I understand design theory and applications and strongly advocate for user experiance improvements.
               </p>
             </div>
           </div>
@@ -323,11 +319,9 @@
               <span class="ico-circle"><i class="ion-wifi"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Networking</h2>
+              <h2 class="s-title">Cloud/Server</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                I'm not a network engineer but I've setup custom servers, have two at my house and know how to use nmap, postman, burp, splunk(email), cpanel, and others.
               </p>
             </div>
           </div>
